# Subrange

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: take_insert.rs
src/: collection.rs  interval.rs  lib.rs
