[package]
name = "subranges"
version = "0.2.0"
authors = ["f3kilo <f3kilo@yandex.ru>"]
edition = "2018"
repository = "https://github.com/F3kilo/subrange"
description = "Library to manage non-interssecting integer intervals"
readme = "README.md"
license = "Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
